@@ -1,4 +1,5 @@
 0.0.5
+Search as you type now added, use down key for next item, return to select, click anywhere to rteset search term.
 Added persistent right click pop menu to location box for recent locations.
 Added persistent net mount history to toolbar ( use 'C' in prefs toolbar layout to enable ).
 Mount davfs share from address bar with format:http://[USERNAME[:PASSWORD]@][SERVER][:PORT].
